--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Schemas for JSON Objects, or simply SJOT, is a much simpler alternative to JSON schema. SJOT aims at quick JSON data validation with lightweight schemas and compact validators.",
   "main": "sjot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preversion": "npm test",
+    "version": "npm run dev/build.sh",
+    "postversion": "git push && git push -tags",
+    "test": "dev/test.sh"
   },
   "repository": {
     "type": "git",
