--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "sjot.js",
   "scripts": {
     "preversion": "npm test",
-    "version": "npm run build.sh",
+    "version": "npm run ./build.sh",
     "postversion": "git push && git push -tags",
-    "test": "test.sh"
+    "test": "./test.sh"
   },
   "repository": {
     "type": "git",
