--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "sjot.js",
   "scripts": {
     "preversion": "npm test",
-    "version": "./build.sh",
+    "version": "./build.sh && git add -A dist",
     "postversion": "git push && git push --tags",
     "test": "./test.sh"
   },
