--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sjot",
   "version": "1.3.13",
-  "description": "Schemas for JSON Objects, or simply SJOT, is a more compact alternative to JSON schema. SJOT aims at fast JSON validation with lightweight schemas and compact validators.",
+  "description": "Schemas for JSON Objects, or simply SJOT, offers faster JSON validation with lightweight schemas and compact validators.  SJOT schemas have the look and feel of object templates and are easy to use.",
   "main": "sjot.js",
   "scripts": {
     "preversion": "npm test",
