--- a/package.json
+++ b/package.json
@@ -13,6 +13,19 @@
     "type": "git",
     "url": "git+https://github.com/Genivia/SJOT.git"
   },
+  "testling": {
+    "files": "dev/testling.js",
+    "browsers": [
+      "ie/6..latest",
+      "chrome/22..latest",
+      "firefox/16..latest",
+      "safari/latest",
+      "opera/11.0..latest",
+      "iphone/6",
+      "ipad/6",
+      "android-browser/latest"
+    ]
+  },
   "keywords": [
     "JSON",
     "lightweight",
