--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "sjot",
   "author": "Robert van Engelen and Chris Moutsos",
   "version": "1.4.0",
-  "description": "Schemas for JSON Objects, or simply SJOT, offers faster JSON validation with lightweight schemas and compact validators.  SJOT schemas have the look and feel of object templates and are easy to use.",
+  "description": "Schemas for JSON Objects, or simply SJOT, offers faster JSON validation and type checking with lightweight schemas and compact validators.  SJOT schemas have the look and feel of object templates and are easy to use.",
   "license": "BSD-3-Clause",
   "main": "sjot.js",
   "devDependencies": {
     "tape": "~2.4.0"
-  },
-  "peerDependencies": {
-    "snapsjot": ">=1.3.17"
   },
   "scripts": {
     "preversion": "npm test",
@@ -20,19 +17,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Genivia/SJOT.git"
-  },
-  "testling": {
-    "files": "dev/testling.js",
-    "browsers": [
-      "ie/6..latest",
-      "chrome/22..latest",
-      "firefox/16..latest",
-      "safari/latest",
-      "opera/11.0..latest",
-      "iphone/6",
-      "ipad/6",
-      "android-browser/latest"
-    ]
   },
   "keywords": [
     "JSON",
